test/types/range/vass/slice-unrep-1.chpl
const r1 = .. by 2 align 0;
const r2 = .. by 2 align 1;
const r3 = r1(r2);
writeln(r3);
